--- a/Opengl1/opengl1.vcxproj.filters
+++ b/Opengl1/opengl1.vcxproj.filters
@@ -145,7 +145,9 @@
       <Filter>Header Files</Filter>
     </ClInclude>
     <ClInclude Include="Header Files\FrameBuffer.h" />
-    <ClInclude Include="Header Files\DefferedRendererFragmentBuffer.h" />
+    <ClInclude Include="Header Files\DeferredRendererFragmentBuffer.h" />
+    <ClInclude Include="Header Files\Lights.h" />
+    <ClInclude Include="Header Files\Systems\LightSystem.h" />
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="Source Files\Assets\Asset.cpp">
@@ -163,7 +165,7 @@
     <ClCompile Include="Source Files\Behaviour.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
-    <ClCompile Include="Source Files\BehaviourSystem.cpp">
+    <ClCompile Include="Source Files\Systems\BehaviourSystem.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
     <ClCompile Include="Source Files\Camera.cpp">
@@ -211,10 +213,10 @@
     <ClCompile Include="Source Files\Physics\RigidBody3D.cpp">
       <Filter>Source Files\Physics</Filter>
     </ClCompile>
-    <ClCompile Include="Source Files\RenderingSystem.cpp">
+    <ClCompile Include="Source Files\Systems\RenderingSystem.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
-    <ClCompile Include="Source Files\RigidBodySystem.cpp">
+    <ClCompile Include="Source Files\Systems\RigidBodySystem.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
     <ClCompile Include="Source Files\Shader.cpp">
@@ -242,6 +244,8 @@
       <Filter>Source Files</Filter>
     </ClCompile>
     <ClCompile Include="Source Files\FrameBuffer.cpp" />
-    <ClCompile Include="Source Files\DefferedRendererFragmentBuffer.cpp" />
+    <ClCompile Include="Source Files\DeferedRendererFragmentBuffer.cpp" />
+    <ClCompile Include="Source Files\Lights.cpp" />
+    <ClCompile Include="Source Files\Systems\LightSystem.cpp" />
   </ItemGroup>
 </Project>
