--- a/Opengl1/opengl1.vcxproj.filters
+++ b/Opengl1/opengl1.vcxproj.filters
@@ -148,6 +148,7 @@
     <ClInclude Include="Header Files\DeferredRendererFragmentBuffer.h" />
     <ClInclude Include="Header Files\Lights.h" />
     <ClInclude Include="Header Files\Systems\LightSystem.h" />
+    <ClInclude Include="DepthFrameBuffer.h" />
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="Source Files\Assets\Asset.cpp">
@@ -247,5 +248,6 @@
     <ClCompile Include="Source Files\DeferedRendererFragmentBuffer.cpp" />
     <ClCompile Include="Source Files\Lights.cpp" />
     <ClCompile Include="Source Files\Systems\LightSystem.cpp" />
+    <ClCompile Include="DepthFrameBuffer.cpp" />
   </ItemGroup>
 </Project>
